# sdma

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  board.h
.tmp_trace32/: continue_current_to_first_sweep_failure_5s.cmm  go_for_5s_then_break.cmm  go_until_break_or_150s.cmm  load_clean_64939fe_then_break_2s.cmm  run_clean_64939fe_for_5s_then_break.cmm  run_clean_64939fe_long_settle.cmm  run_clean_64939fe_to_failure_led.cmm  run_clean_64939fe_to_first_sweep_failure.cmm  run_clean_64939fe_to_first_sweep_failure_5s.cmm  run_for_2s_then_break.cmm
extracted/master/evkmimxrt595_ezhb/: .bazelrc  .cproject  BUILD.bazel  MODULE.bazel  build_manual_sources.txt  evkmimxrt595_ezhb LinkServer Debug.launch  evkmimxrt595_ezhb_Debug.ld
extracted/master/evkmimxrt595_ezhb/board/: app.h
extracted/master/evkmimxrt595_ezhb/doc/: pigweed.md
extracted/master/evkmimxrt595_ezhb/pigweed_overrides/pw_log_backend/: log_backend.h
extracted/master/evkmimxrt595_ezhb/scripts/: bootstrap_pigweed.sh  build_rt595.sh  flash_rt595.sh  run_rt595.sh
extracted/master/evkmimxrt595_ezhb/source/: ezh_features.c  ezh_test.c  pigweed_log_backend.c
extracted/master/evkmimxrt595_ezhb/tools/bazel/: build_master_pigweed_flash.sh  build_master_pigweed_ram.sh
extracted/master/evkmimxrt595_ezhb/variants/: ezh_test_master.c  ezh_test_pigweed.c
extracted/smartDMA_I3C/slave/slave/: BUILD.bazel  i3c_interrupt_b2b_transfer_slave.c
src/master/: BUILD.bazel  evkmimxrt595_ezhb_FastbootApp.ld  evkmimxrt595_ezhb_HelloRam.ld
src/master/board/: app.h
src/master/doc/: pigweed.md  trace32_analyzer_debugging.md
src/master/drivers/: fsl_i3c.c  fsl_i3c.h  fsl_i3c_smartdma.c  fsl_i3c_smartdma.h
src/master/fastboot/: boot.cc  bootloader.h  flash.cc  flash.h  main.cc  mimxrt595_flash.ld  syscalls.c
src/master/fastboot/config/: board.c  board.h  pin_mux.c  pin_mux.h
src/master/fastboot/lib/pw_fastboot_usb_mcuxpresso/: packet_mimxrt595evk.cc
src/master/fastboot/lib/pw_fastboot_usb_mcuxpresso/private/: packet_mimxrt595evk.h
src/master/fastboot/lib/pw_fastboot_usb_mcuxpresso/public/pw_fastboot_usb_mcuxpresso/: packet_mimxrt595evk.h  transport.h
src/master/scripts/: flash_rt595.sh  run_rt595.sh
src/master/source/: ezh_features.c  pigweed_log_backend.c  syscalls.c
src/master/variants/: ezh_test_master_pigweed.c
src/slave/: BUILD.bazel  clock_config.c  i3c_interrupt_b2b_transfer_slave.c
tools/bazel/: BUILD.bazel  flash_linkserver.sh  linkserver_common.sh  rt595_defs.bzl  run_linkserver.sh  transition.bzl  verify_i3c_transfer.sh
tools/bazel/patches/: BUILD.bazel  pigweed_local_config_platform.patch  pigweed_rt595_toolchain.patch
tools/linkserver/: run_master_slave_transfer_timing.sh
tools/trace32/: run_master_slave_transfer_speed_matrix.sh
