load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "mcuxpresso_app_include",
    srcs = ["board.h"],
)

filegroup(
    name = "arm_none_eabi_objcopy",
    srcs = [
        ".local/toolchains/arm-gnu-toolchain-15.2.rel1-darwin-arm64-arm-none-eabi/bin/arm-none-eabi-objcopy",
    ],
)

alias(
    name = "master_pigweed_ram.elf",
    actual = "//src/master:master_pigweed_ram.elf",
)

alias(
    name = "master_pigweed_flash.elf",
    actual = "//src/master:master_pigweed_flash.elf",
)

alias(
    name = "master_fastboot_bootloader.elf",
    actual = "//src/master:master_fastboot_bootloader.elf",
)

alias(
    name = "master_pigweed_fastboot_app.elf",
    actual = "//src/master:master_pigweed_fastboot_app.elf",
)

alias(
    name = "master_fastboot_bootloader.fastboot",
    actual = "//src/master:master_fastboot_bootloader_fastboot_pkg",
)

alias(
    name = "master_pigweed_fastboot_app.fastboot",
    actual = "//src/master:master_pigweed_fastboot_app_fastboot_pkg",
)

alias(
    name = "slave_ram.elf",
    actual = "//src/slave:slave_ram.elf",
)

alias(
    name = "slave_flash.elf",
    actual = "//src/slave:slave_flash.elf",
)

sh_binary(
    name = "run_master_pigweed_ram",
    srcs = ["//tools/bazel:run_linkserver.sh"],
    data = ["//src/master:master_pigweed_ram.elf"],
    args = [
        "$(location //src/master:master_pigweed_ram.elf)",
        "PRASAQKQ",
        "semihost",
    ],
)

sh_binary(
    name = "flash_master_pigweed_flash",
    srcs = ["//tools/bazel:flash_linkserver.sh"],
    data = ["//src/master:master_pigweed_flash.elf"],
    args = [
        "$(location //src/master:master_pigweed_flash.elf)",
        "PRASAQKQ",
    ],
)

sh_binary(
    name = "flash_master_fastboot_bootloader",
    srcs = ["//tools/bazel:flash_linkserver.sh"],
    data = ["//src/master:master_fastboot_bootloader.elf"],
    args = [
        "$(location //src/master:master_fastboot_bootloader.elf)",
        "PRASAQKQ",
    ],
)

sh_binary(
    name = "flash_master_pigweed_fastboot_app",
    srcs = ["//tools/bazel:flash_linkserver.sh"],
    data = ["//src/master:master_pigweed_fastboot_app.elf"],
    args = [
        "$(location //src/master:master_pigweed_fastboot_app.elf)",
        "PRASAQKQ",
    ],
)

sh_binary(
    name = "run_slave_ram",
    srcs = ["//tools/bazel:run_linkserver.sh"],
    data = ["//src/slave:slave_ram.elf"],
    args = [
        "$(location //src/slave:slave_ram.elf)",
        "GRA1CQLQ",
        "semihost",
    ],
)

sh_binary(
    name = "flash_slave_flash",
    srcs = ["//tools/bazel:flash_linkserver.sh"],
    data = ["//src/slave:slave_flash.elf"],
    args = [
        "$(location //src/slave:slave_flash.elf)",
        "GRA1CQLQ",
    ],
)

sh_binary(
    name = "verify_master_slave_transfer",
    srcs = ["//tools/bazel:verify_i3c_transfer.sh"],
    data = [
        "//src/master:master_pigweed_ram.elf",
        "//src/slave:slave_flash.elf",
    ],
    args = [
        "$(location //src/master:master_pigweed_ram.elf)",
        "$(location //src/slave:slave_flash.elf)",
        "PRASAQKQ",
        "GRA1CQLQ",
    ],
)